Documentation edits made through Mintlify web editor

--- a/app-builder/builder/components/flashsale.mdx
+++ b/app-builder/builder/components/flashsale.mdx
@@ -18,7 +18,13 @@ icon: "bolt"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image145_2567539437.png"
         alt="Nút thêm dữ liệu mới cho FlashSale trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút thêm dữ liệu mới"
       />
     </Frame>
@@ -30,7 +36,13 @@ icon: "bolt"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image155_f5334e8e57.png"
         alt="Giao diện thêm dữ liệu FlashSale và nhập tiêu đề"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Thêm dữ liệu FlashSale"
       />
     </Frame>
@@ -50,7 +62,13 @@ icon: "bolt"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image111_d570a45bee.png"
         alt="Nút chỉnh sửa FlashSale trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút chỉnh sửa FlashSale"
       />
     </Frame>
@@ -62,7 +80,13 @@ icon: "bolt"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image178_35cf75f28c.png"
         alt="Giao diện chỉnh sửa thông tin và hình ảnh FlashSale"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Chỉnh sửa dữ liệu FlashSale"
       />
     </Frame>
@@ -82,7 +106,13 @@ icon: "bolt"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image112_cd35ffc2fb.png"
         alt="Nút xóa sản phẩm khỏi chương trình FlashSale trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút xóa dữ liệu FlashSale"
       />
     </Frame>
@@ -94,7 +124,13 @@ icon: "bolt"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image104_1ba4757e62.png"
         alt="Hộp xác nhận thao tác xóa sản phẩm khỏi FlashSale"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Xác nhận xóa dữ liệu FlashSale"
       />
     </Frame>
@@ -110,7 +146,13 @@ icon: "bolt"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image158_131887ac4e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -122,7 +164,13 @@ icon: "bolt"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image460_6a756c61f1.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -134,7 +182,13 @@ icon: "bolt"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image98_b161364914.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -146,7 +200,13 @@ icon: "bolt"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image461_33faceab82.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -161,7 +221,13 @@ icon: "bolt"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image462_9fc3e3aadb.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -175,7 +241,13 @@ icon: "bolt"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image463_c5bbf69a6f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -186,7 +258,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image464_8c287444ed.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -198,7 +276,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image465_c2c868c35f.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -209,7 +293,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image466_65338c1cbf.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -223,7 +313,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image467_91eb9f6c9a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -234,7 +330,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image468_3e083ab3cd.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -247,7 +349,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image469_061db1195c.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -258,7 +366,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image470_9eacd532a6.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -269,7 +383,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image205_f1a2e691d8.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -280,7 +400,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image471_e686c605b9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -294,7 +420,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image472_5f8128f825.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -305,7 +437,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image473_09523ef95e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -316,7 +454,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image474_953130ac63.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -328,7 +472,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image475_f7aeca1b18.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -339,7 +489,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image476_7379ecd00d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -350,7 +506,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image477_ae8663a839.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -362,7 +524,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image478_821ff1ee0d.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -376,7 +544,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image479_d0c4a63f7e.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -387,7 +561,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image480_908aae6199.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -399,7 +579,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image481_6ad38e6282.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -410,7 +596,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image482_43dc2f87eb.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -424,7 +616,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image483_b1a321d908.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -435,7 +633,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image481_6ad38e6282.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -453,7 +657,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image486_5a03602632.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -464,7 +674,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image487_bdb9e62773.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -475,7 +691,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image488_676cb7fa0a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -487,7 +709,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image489_74ef519774.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -498,7 +726,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image490_1ebdf74714.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -508,7 +742,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image491_57e02e2cbe.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -518,7 +758,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image492_7b76511134.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -529,7 +775,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image493_2e8b980b98.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -541,7 +793,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image494_33deb886bd.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -555,7 +813,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image496_c22f3c8db6.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -566,7 +830,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image497_057c35d004.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -578,7 +848,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image498_25be7ebd89.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -589,7 +865,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image499_31bcf8e8ce.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -603,7 +885,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image500_dbf1405406.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -614,7 +902,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image501_a01b52cf7b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -634,7 +928,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image502_ad240ed58a.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -648,7 +948,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image503_a7a1624f73.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -670,7 +976,13 @@ hoặc điềù chỉnh riêng lẻ độ bo góc của từng góc bằng cách
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image504_cb176069b9.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
