--- a/app-builder/builder/components/support.mdx
+++ b/app-builder/builder/components/support.mdx
@@ -17,7 +17,13 @@ icon: "headphones"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image148_69d20274aa.png"
         alt="Nút thêm dữ liệu mới trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút thêm dữ liệu mới"
       />
     </Frame>
@@ -29,7 +35,13 @@ icon: "headphones"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image24_da75c9f2f9.png"
         alt="Giao diện thêm dữ liệu và chọn đường dẫn trang đích"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Thêm dữ liệu mới"
       />
     </Frame>
@@ -49,7 +61,13 @@ icon: "headphones"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image233_ad54a4651a.png"
         alt="Nút chỉnh sửa dữ liệu trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút chỉnh sửa"
       />
     </Frame>
@@ -61,7 +79,13 @@ icon: "headphones"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image213_c7c5f31cc0.png"
         alt="Giao diện chỉnh sửa thông tin và đường dẫn dữ liệu"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Chỉnh sửa dữ liệu"
       />
     </Frame>
@@ -81,7 +105,13 @@ icon: "headphones"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image186_79b01da3b0.png"
         alt="Nút xóa dữ liệu trong giao diện quản lý"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút xóa dữ liệu"
       />
     </Frame>
@@ -93,7 +123,13 @@ icon: "headphones"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image161_914288a857.png"
         alt="Hộp xác nhận thao tác xóa dữ liệu"
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Xác nhận xóa dữ liệu"
       />
     </Frame>
@@ -111,7 +147,13 @@ icon: "headphones"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image458_d722b5c300.png"
         alt=""
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title=""
       />
     </Frame>
@@ -124,7 +166,13 @@ icon: "headphones"
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image459_97e5efd0a0.png"
         alt=""
-        style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title=""
       />
     </Frame>
